--- a/QuestionsGame/QuestionsGame.iOS/QuestionsGame.iOS.csproj
+++ b/QuestionsGame/QuestionsGame.iOS/QuestionsGame.iOS.csproj
@@ -169,6 +169,18 @@
   <ItemGroup>
     <BundleResource Include="Resources\questionperson.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\right.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\test_grid_img.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\world_flags_mobile.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\wrong.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.0.0.6482\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
