--- a/QuestionsGame/QuestionsGame/QuestionsGame.csproj
+++ b/QuestionsGame/QuestionsGame/QuestionsGame.csproj
@@ -50,6 +50,9 @@
     <Compile Include="resultwrong.xaml.cs">
       <DependentUpon>resultwrong.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Services\IAudio.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Include="Stats.xaml.cs">
       <DependentUpon>Stats.xaml</DependentUpon>
     </Compile>
