--- a/QuestionsGame/QuestionsGame.Droid/QuestionsGame.Droid.csproj
+++ b/QuestionsGame/QuestionsGame.Droid/QuestionsGame.Droid.csproj
@@ -261,6 +261,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\raw\train.mp3" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\canada.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
